<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.a501project.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_gameServersFragment"
            app:destination="@id/gameServersFragment" />
    </fragment>

    <fragment
        android:id="@+id/gameServersFragment"
        android:name="com.example.a501project.ui.home.GameServersFragment"
        android:label="Game Servers"
        tools:layout="@layout/fragment_game_servers" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.a501project.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.a501project.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_navigation_profile_to_profileEditFragment"
            app:destination="@id/navigation_profile_edit" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile_edit"
        android:name="com.example.a501project.ui.profile.ProfileEditFragment"
        android:label="@string/title_profile_edit"
        tools:layout="@layout/fragment_profile_edit"/>
</navigation>
